# bitcoin-script-analyzer

./: Cargo.toml  todo.txt
.github/workflows/: build_and_test.yml
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
lib/: Cargo.toml
lib/src/: analyzer.rs  condition_stack.rs  context.rs  lib.rs  opcode.rs  script_error.rs  threadpool.rs
lib/src/expr/: bytes.rs  mod.rs  op.rs  opcode.rs  stack.rs
lib/src/script/: convert.rs  mod.rs  stack.rs
lib/src/util/: checksig.rs  locktime.rs  mod.rs
src/: analyzer.rs  condition_stack.rs  context.rs  expr.rs  lib.rs  opcode.rs  script_error.rs
src/expr/: bytes.rs
src/script/: convert.rs  mod.rs  stack.rs
src/util/: checksig.rs  mod.rs
web/: Cargo.toml  dev  index.html  wasm_pack_debug  wasm_pack_release
web/src/: lib.rs  util.rs
