[package]
name = "bitcoin-script-analyzer-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitcoin-script-analyzer = { path = ".." }
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = [
	"Document",
	"Element",
	"HtmlElement",
	"Node",
	"Window",
] }

[profile.release]
lto = true
