[package]
name = "bitcoin-script-analyzer-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitcoin-script-analyzer = { path = "../lib" }
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.91"
web-sys = { version = "0.3.68", features = [
	"Document",
	"Element",
	"Event",
	"HtmlElement",
	"HtmlInputElement",
	"HtmlSelectElement",
	"Node",
	"Window",
] }
